--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot==20.7
-asyncpg==0.29.0
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-dotenv==1.0.0
+python-telegram-bot>=20.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
+asyncpg>=0.28.0
